# ApplicationController

./: README.md  pyproject.toml  requirements.txt  server.py
.github/: copilot-instructions.md
scripts/: benchmark_before_after.py  benchmark_results.json
