[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "application-controller"
version = "0.1.0"
description = "MCP server exposing PyAutoGUI GUI-automation tools to Copilot and other MCP clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pyautogui",
    "Pillow",
]

[project.optional-dependencies]
image-search = ["opencv-python"]

[project.scripts]
application-controller = "server:main"

[tool.setuptools.packages.find]
where = ["."]
